Bug 162173 - Flow control warning widget conflicts with Emacs Ctrl+S
Summary: Flow control warning widget conflicts with Emacs Ctrl+S
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Robert Knight
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-16 17:25 UTC by Robert Knight
Modified: 2008-05-17 01:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Knight 2008-05-16 17:25:23 UTC
Version:            (using Devel)
Installed from:    Compiled sources

The flow control warning widget in Konsole appears whenever Ctrl+S is pressed and flow control is enabled in the current profile.

This is annoying when using Emacs which uses Ctrl+X,Ctrl+S to save.
Comment 1 Robert Knight 2008-05-17 01:59:44 UTC
SVN commit 808588 by knight:


Do not show flow control warning widget if terminal application (eg. Emacs) disables
flow control.  Check current terminal flow control settings when Ctrl+S is pressed and only 
show the warning if the warning is enabled in profile settings and Xon/Xoff is 
enabled in the terminal.

BUG: 162173
CCMAIL: jriddell@ubuntu.com



 M  +7 -0      Emulation.h  
 M  +13 -1     Pty.cpp  
 M  +7 -2      Pty.h  
 M  +28 -8     Session.cpp  
 M  +1 -0      Session.h  
 M  +0 -12     TerminalDisplay.cpp  
 M  +7 -9      TerminalDisplay.h  
 M  +9 -1      Vt102Emulation.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=808588