Do not show flow control warning widget if terminal application (eg. Emacs) disables flow control.  Check current terminal flow control settings when Ctrl+S is pressed and only show the warning if the warning is enabled in profile settings and Xon/Xoff is enabled in the terminal.

BUG: 162173
CCMAIL: jriddell@ubuntu.com


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=808588