src/Emulation.h
@@ -389,6 +389,13 @@ signals:
    */
   void profileChangeCommandReceived(const QString& text);
 
+  /** 
+   * Emitted when a flow control key combination ( Ctrl+S or Ctrl+Q ) is pressed.
+   * @param suspendKeyPressed True if Ctrl+S was pressed to suspend output or Ctrl+Q to
+   * resume output.
+   */
+  void flowControlKeyPressed(bool suspendKeyPressed);
+
 protected:
   virtual void setMode  (int mode) = 0;
   virtual void resetMode(int mode) = 0;
